# audio-downloader

./: .gitignore  Danish Word Audio Downloader GUI.py  Danish Word Audio Downloader Simple.py  Danish Word Audio Downloader.py  EXAMPLE_SENTENCES_FEATURE.md  LICENSE  Makefile  README.md  TESTS_SUMMARY.md  TEST_DOCUMENTATION.md  app_icon.icns  build_app.sh  danish_words.txt  main.py  pyproject.toml  requirements-test.txt  requirements.txt  run_tests.py  setup.py  smoke_test.py  test_core_functionality.py  test_forvo_integration.py  test_gui_components.py  test_simple.py
.github/workflows/: tests.yml
build-tools/: MANIFEST.in  app_icon.icns  build_app.sh  convert_png_to_icon.py  create_icon.py  fix_app_signing.sh  setup.py
src/danish_audio_downloader/: __init__.py  main.py
src/danish_audio_downloader/core/: __init__.py  audio_provider.py  concurrent_downloader.py  downloader.py  forvo_api.py  image_worker.py  sentence_worker.py  worker.py
src/danish_audio_downloader/gui/: __init__.py  app.py
src/danish_audio_downloader/gui/logic/: __init__.py  card_processor.py  settings_manager.py
src/danish_audio_downloader/gui/widgets/: __init__.py  main_tab.py  review_tab.py  settings_tab.py
src/danish_audio_downloader/utils/: __init__.py  config.py  ordnet_parser.py  validators.py
test_data/: mock_ordnet_response.html  sample_words.txt
tests/: pytest.ini  run_tests.py  smoke_test.py  test_core_functionality.py  test_gui_components.py
